<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pushme="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/user_select_action_search"
        android:icon="@drawable/actionbar_search_icon"
        android:title="@string/search"
        pushme:showAsAction="ifRoom|collapseActionView"
        pushme:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/action_user_select"
        android:title="@string/select_all"
        pushme:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_user_select_complete"
        android:title="@string/user_select_complete"
        pushme:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_user_select_cancel"
        android:title="@string/user_select_cancel"
        pushme:showAsAction="ifRoom|withText"/>

</menu>