<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
	
    
    <!-- 
     <TextView
        android:id="@+id/timetable_section"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1.0"
        android:gravity="center"
        android:text="@string/timetable_section"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />
     -->
    <TextView
        android:id="@+id/timetable_monday"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="2.0"
        android:gravity="center"
        android:text="@string/timetable_monday"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
         android:id="@+id/timetable_tuesday"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="2.0"
        android:gravity="center"
        android:text="@string/timetable_tuesday"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
        android:id="@+id/timetable_wednesday"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="right"
        android:text="@string/timetable_wednesday"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
        android:id="@+id/timetable_thursday"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="right"
        android:text="@string/timetable_thursday"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
        android:id="@+id/timetable_friday"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="right"
        android:text="@string/timetable_friday"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
        android:id="@+id/timetable_saturday"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="right"
        android:text="@string/timetable_saturday"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#f9b68b" />

    <TextView
        android:id="@+id/timetable_sunday"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="right"
        android:text="@string/timetable_sunday"
        android:textColor="#ffffffff"
        android:textSize="14.0dip"
        android:clickable="true" />

</LinearLayout>