<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_normal"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <TextView
        android:id="@+id/tv_teacher_notice_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_notice"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/big_text" />

    <View style="@style/ListDivider" />
	
    <RelativeLayout
        android:id="@+id/layout_notice_teacher_user_list"
        style="@style/ListItem"
        android:padding="0.0dip" >

        <TextView
            android:id="@+id/tv_notice_teacher_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/select_recv_user"
            android:textColor="@color/tips_text"
            android:textSize="@dimen/normal_text" />

        <ImageView style="@style/ListItemArrow" />
    </RelativeLayout>
    
         <View style="@style/ListDivider" />
     
    <EditText
        android:id="@+id/et_teacher_notice_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:hint="@string/user_select_title"
        android:minLines="2"
        android:textSize="@dimen/edit_text" 
        android:enabled="false"/>
    
    
     <View style="@style/ListDivider" />
     
    <EditText
        android:id="@+id/et_teacher_notice_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:hint="@string/input_notice_title"
        android:maxLines="3"
         android:inputType="text"
        android:textSize="@dimen/edit_text" />

    <EditText
        android:id="@+id/et_teacher_notice_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollbars="none"
        android:scrollbarStyle="outsideOverlay"
        android:hint="@string/input_notice_content"
        android:minLines="6"
        android:textSize="@dimen/edit_text" />

</LinearLayout>