<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_normal"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <TextView
        android:id="@+id/tv_school_notice_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_notice"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/big_text" />

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/receive_type_notice"
        android:textColor="@color/tips_text"
        android:textSize="@dimen/normal_text" />

    <View style="@style/ListDivider" />
	
    <Spinner 
           android:id="@+id/sp_school_notice_receive_type"   
           android:layout_width="fill_parent"  
           android:layout_margin="5.0dip"
           android:background="@color/background_dark"
           android:layout_height="wrap_content"/>  
    
    <EditText
        android:id="@+id/et_school_notice_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:hint="@string/input_notice_title"
        android:maxLines="3"
        android:inputType="text"
        android:textSize="@dimen/edit_text" />

    <EditText
        android:id="@+id/et_school_notice_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:hint="@string/input_notice_content"
        android:minLines="6"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:textSize="@dimen/edit_text" />

</LinearLayout>