<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:listViewAttr="http://schemas.android.com/apk/res/com.stinfo.pushme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_normal"
    android:orientation="vertical" >
	<ScrollView
	    android:layout_width="match_parent"
    	android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8.0dip"
        android:layout_marginTop="8.0dip"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_virtuous_coin"
            style="@style/GreenButton"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/normal_padding"
            android:layout_marginRight="@dimen/normal_padding"
            android:text="@string/virtuous_coin" />
        
		<View style="@style/ListDivider" />
        <TextView
	        android:id="@+id/tv_virtuous_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5.0dip"
	        android:text="@string/virtuous_type"
	        android:textColor="@color/tips_text"
	        android:textSize="@dimen/normal_text" />
        
         <Spinner 
             android:id="@+id/sp_virtuous_type"   
           android:layout_width="fill_parent"  
           android:layout_margin="5.0dip"
           android:background="@color/background_dark"
           android:layout_height="wrap_content"/>  
         <View style="@style/ListDivider" />
        <TextView
        android:id="@+id/tv_virtuous_add_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:text="@string/input_virtuous_add_score"
        android:textColor="@color/tips_text"
        android:textSize="@dimen/normal_text" />
        
        
        <EditText
            android:id="@+id/et_virtuous_add_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg_selector"
            android:layout_margin="10.0dip"
            android:inputType="number"
            android:textSize="@dimen/edit_text" />
        
        
        <TextView
        android:id="@+id/tv_virtuous_add_reason_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:text="@string/input_virtuous_add_reason_content"
        android:textColor="@color/tips_text"
        android:textSize="@dimen/normal_text" />
        
        <View style="@style/ListDivider" />
        
        <EditText
            android:id="@+id/et_virtuous_add_reason_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:background="@drawable/edittext_bg_selector"
            android:ems="10"
        	android:minLines="3"
            android:textSize="@dimen/edit_text" />
        <View style="@style/ListDivider" />
        
         <TextView
        android:id="@+id/tv_virtuous_add_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:text="@string/input_virtuous_add"
        android:textColor="@color/tips_text"
        android:textSize="@dimen/normal_text" />
        
         <EditText
            android:id="@+id/et_virtuous_add_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg_selector"
            android:layout_margin="5.0dip"
            android:inputType="number"
            android:textSize="@dimen/edit_text" />
         
 		<View style="@style/ListDivider" />
        
        <Button
            android:id="@+id/btn_virtuous_add"
            style="@style/GreenButton"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/normal_padding"
            android:layout_gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/virtuous_add" />
    </LinearLayout>
	</ScrollView>
</LinearLayout>