<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_normal"
    android:orientation="vertical"
    android:paddingLeft="10.0dip"
    android:paddingRight="10.0dip" >

    <TextView
        android:id="@+id/tv_content_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:text="@string/content"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/big_text" />

    <View style="@style/ListDivider" />
    
    <RelativeLayout 
        android:id="@+id/rl_layout_body"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="1.0"
        >
      <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:hint="@string/input_title"
        android:singleLine="true"
        android:textSize="@dimen/edit_text" />
        
      <EditText
        android:id="@+id/et_content"
        android:layout_below="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/edittext_bg_selector"
        android:ems="10"
        android:hint="@string/input_content"
        android:minLines="8"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:textSize="@dimen/edit_text" />
    
    	<RelativeLayout  
    	    android:id="@+id/img_add_layout"
    	    android:layout_below="@+id/et_content"
         	android:layout_marginTop="10.0dip"
          	android:layout_width="match_parent"
        	android:layout_height="66dp"
        	android:orientation="horizontal"
        	>
           <ImageView
            android:id="@+id/img_btn_add_1"
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/normal_padding"
            android:background="@drawable/btn_add_normal"
           />
          <ImageView
            android:id="@+id/img_btn_add_2"
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/img_btn_add_1"
            android:layout_marginLeft="@dimen/normal_padding"
            android:background="@drawable/btn_add_normal"
           />
           <ImageView
            android:id="@+id/img_btn_add_3"
             android:layout_width="46dp"
            android:layout_height="match_parent"
           android:layout_toRightOf="@+id/img_btn_add_2"
            android:layout_marginLeft="@dimen/normal_padding"
            android:background="@drawable/btn_add_normal"
           />
           <ImageView
            android:id="@+id/img_btn_add_4"
             android:layout_width="46dp"
            android:layout_height="match_parent"
             android:layout_toRightOf="@+id/img_btn_add_3"
            android:layout_marginLeft="@dimen/normal_padding"
            android:background="@drawable/btn_add_normal"
           />
    	</RelativeLayout>
        
    </RelativeLayout>

</LinearLayout>